app/webpacker/styles/application.scss
@function frontend-font-url($filename) {
  @return url("~assets/fonts/" + $filename);
}

@function frontend-image-url($filename) {
  @return url("~assets/images/" + $filename);
}

$govuk-font-url-function: frontend-font-url;
$govuk-image-url-function: frontend-image-url;

@import "~govuk-frontend/govuk/all";
@import "~accessible-autocomplete";

@import "notification_banner";
@import "app_task_list";
@import "vendor/components/step-by-step-header";
@import "vendor/components/step-by-step-nav";
@import "header_overrides";
@import "lead_providers/dashboard_numbers";
@import "lead_providers/index_group";
@import "lead_providers/your_schools";
@import "lead_providers/masthead";
@import "lead_providers/app_button_inverted";
@import "lead_providers/app_section";
@import "lead_providers/code";
@import "lead_providers/contents_list";
@import "lead_providers/syntax_highlighting";
@import "pagination";
@import "subnav";
@import "primary-nav";
@import "school_search";
@import "search_box";
@import "aside";
@import "vendor/nhs_tables";

.govuk-tag {
  white-space: nowrap;
}

.error-message {
  color: $govuk-error-colour;
}

.lead-provider-content img {
  max-width: 629px;
}

.bold-label {
  font-weight: 700;
}

